--- a/src/components/JobsList/JobsList.module.scss
+++ b/src/components/JobsList/JobsList.module.scss
@@ -1,9 +1,6 @@
 
 
 .jobsList {
-  background-color: rgba(0, 0, 0, 0.02);
+  background-color: #ffffff;
   flex: 1;
-  max-width: 600px;
-  min-width: 600px;
-  width: 100%;
 }
