--- a/src/containers/JobsSearch/JobsSearch.module.scss
+++ b/src/containers/JobsSearch/JobsSearch.module.scss
@@ -12,6 +12,12 @@ $shadow-color: rgba(0, 0, 0, 0.1);
   background-color: #f2f2f2;
 }
 
+.stickyAppBar {
+  z-index: 1000;
+  position: sticky;
+  top: 0;
+}
+
 
 .jobsList {
   max-width: 600px !important;
@@ -27,7 +33,7 @@ $shadow-color: rgba(0, 0, 0, 0.1);
 }
 
 .filterPaneLeft {
-  padding-top: 20px;
+  padding-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -37,7 +43,7 @@ $shadow-color: rgba(0, 0, 0, 0.1);
 }
 
 .filterPaneRight {
-  padding-top: 20px;
+  padding-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
