--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,11 @@ html, body {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  /*overflow: hidden; !* Hide scrollbars *!*/
+
 }
 
 code {
@@ -17,4 +21,9 @@ code {
 #root {
   height: 100%;
   display: flex;
+  flex: 1;
+}
+
+*:focus {
+  outline: none!important;
 }
