restructured code, api requests in thunk

--- a/src/containers/FrontPage/FrontPage.module.scss
+++ b/src/containers/FrontPage/FrontPage.module.scss
@@ -1,5 +1,5 @@
-@import "src/styles/colors";
-@import "src/styles/breakpoints";
+@import "src/utils/styles/colors";
+@import "src/utils/styles/breakpoints";
 
 .LoginCol {
   padding-left: 50px !important;
