--- a/src/containers/JobsSearch/JobsSearch.module.scss
+++ b/src/containers/JobsSearch/JobsSearch.module.scss
@@ -1,5 +1,5 @@
-@import "src/styles/breakpoints";
-@import "src/styles/colors";
+@import "src/utils/styles/breakpoints";
+@import "src/utils/styles/colors";
 
 $shadow-hoffset: 0px;
 $shadow-voffset: 2px;
