--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -1,4 +1,4 @@
-@import "src/styles/breakpoints";
+@import "src/utils/styles/breakpoints";
 
 $appBar-primary-color: #ffffff;
 $shadow-hoffset: 0px;
