--- a/src/containers/JobsPage/JobsPage.module.scss
+++ b/src/containers/JobsPage/JobsPage.module.scss
@@ -20,6 +20,8 @@ $shadow-color: rgba(0, 0, 0, 0.1);
 
 
 .jobsList {
+  padding: 20px 0;
+  flex: 1;
   max-width: 600px !important;
   min-width: 600px !important;
   background-color: #ffffff;
