--- a/src/components/SearchField/SearchField.module.scss
+++ b/src/components/SearchField/SearchField.module.scss
@@ -1,8 +1,8 @@
 @import "src/utils/styles/breakpoints";
 
 .searchField {
-  padding: 0 10px;
-  width: 600px;
+  //padding: 0 10px;
+  //width: 600px;
   @include bp-600px {
     width: unset;
     flex: 1;
@@ -19,13 +19,14 @@
 
 
 .searchIcon {
+  margin-left: 10px;
   width: 25px;
   height: 25px;
   fill: #b8b8b8;
 }
 
 .searchInputContainer {
-  padding-left: 20px;
+  //padding-left: 10px;
   width: 100%;
   height: 40px;
   display: flex;
