--- a/src/containers/JobsPage/JobsPage.module.scss
+++ b/src/containers/JobsPage/JobsPage.module.scss
@@ -18,7 +18,9 @@ $shadow-color: rgba(0, 0, 0, 0.1);
   border-top-right-radius: 5px;
   margin-top: 20px;
   flex: 1;
-  padding: 0!important;
+  display: flex;
+  flex-direction: column;
+  padding: 0 !important;
   max-width: 600px !important;
   min-width: 600px !important;
   background-color: #ffffff;
