--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ html, body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    /*overflow: hidden; !* Hide scrollbars *!*/
+    overscroll-behavior-y: none;
 
 }
 
